# ObsiRAG

./: .gitignore  .mcp.json  README.md  analyze_vault.py  check_db.py  fastAPI.py  ingest.py  ingest_v2.py  mcp_server.py  pyproject.toml  query.py  tui.py  unload_models.sh  web_ui.py
doc/: Log#1.md  Log#2.md  Log2.5.1.md  Log2.5.md  Log3.5.md  Log3.md  Log4.md  Log6.md  V1alphaSprint.md 
rag/: __init__.py  answering.py  config.py  editing.py  obsidian_verify.py  retrieval.py  styles.py  text_processing.py
templates/: index.html
