[project]
name = "obsidian-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.131.0",
    "jinja2>=3.1.6",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
